# parse-trial-labs

./: .python-version  README.md  README.rst  pyproject.toml
.github/workflows/: build.yml
docs/: conf.py  index.rst
src/parse_labs/: __init__.py  constants.py  main.py  parsers.py
src/parse_labs/parsers/: __init__.py
src/parse_labs/parsers/parse_mnh/: __init__.py  parser.py
src/parse_trial_labs/: main.py  parse_folder.py
src/parse_trial_labs/parsers/parse_mnh/: constants.py
tests/: fake_pdf.py  test_parse_labs.py  test_parse_mnh.py
