[project]
name = "parse-pdf"
version = "0.1.0"
description = "Parse laboratory result PDFs from Muhimbili National Hospital, Dar Es Salaam, Tanzania"
authors = [
    { name = "Erik van Widenfelt", email = "ew2789@gmail.com" },
]
keywords = [
    "django",
    "clinicedc",
    "parse",
    "laboratory results",
    "Muhimbili",
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.14",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "fpdf2>=2.8",
]

[project.scripts]
parse-labs = "parse_labs.main:main"

[build-system]
requires = ["uv_build>=0.7.2,<1"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "parse_labs"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
